--- a/Setup.css
+++ b/Setup.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -49,7 +45,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-// RESET END
+/* RESET END */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
     font-family: "Lucida Console", monospace;
