update CreateEvent.svelte, app.css, tailwind.config.ts, ...

--- a/Client/src/app.css
+++ b/Client/src/app.css
@@ -54,3 +54,8 @@ table {
 body {
     font-family: 'Monaco', 'Courier New', monospace;
 }
+
+input {
+	@apply bg-c0 p-1 focus:ring-c1 focus:border-c1 border border-c1;
+}
+
